--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <div class="col-lg-7 text-left">
                         <div class="h-100 d-inline-flex align-items-center py-2 px-3">
                             <i class="fa fa-envelope text-primary mr-2"></i>
-                            <small>contact@lykansassociate.com</small>
+                            <small>contact@lykansassociates.com</small>
                         </div>
                         <div class="h-100 d-inline-flex align-items-center py-2 px-2">
                             <i class="fa fa-phone-alt text-primary mr-2"></i>
@@ -168,8 +168,8 @@
                         style="width: 350px; margin-left: -205px;">Learn About Us</h2>
                     <h6 class="text-uppercase"></h6>
                     <h1 style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;" class="mb-4">Pave
-                        the Path to a Prosperous Future with Lykans Associate</h1>
-                    <p>At <span style="color: #b98157;">Lykans Associate,</span> we are committed to shaping financial
+                        the Path to a Prosperous Future with Lykans Associates</h1>
+                    <p>At <span style="color: #b98157;">Lykans Associates,</span> we are committed to shaping financial
                         success stories by delivering innovative, reliable, and tailored investment solutions. Our team
                         of seasoned professionals, celebrated for their profound expertise and extensive experience
                         across diverse investment domains, is the cornerstone of our success.<br>
@@ -363,6 +363,7 @@
     </div>
     <!-- Action End -->
     <div class="container1">
+         <h1 style="text-align: center; text-transform:uppercase; font-family:Georgia, 'Times New Roman', Times, serif">Our Companies</h1>
         <div class="swiper">
             <div class="swiper-wrapper">
                 <!-- Slide 1 -->
@@ -554,7 +555,7 @@
                     <i class="fa fa-2x fa-envelope-open text-primary"></i>
                     <div class="ml-3">
                         <h5 class="text-white">Email Us</h5>
-                        <p class="m-0">contact@lykansassociate.com</p>
+                        <p class="m-0">contact@lykansassociates.com</p>
                     </div>
                 </div>
             </div>
@@ -605,7 +606,7 @@
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
                 <h4 class="font-weight-semi-bold text-primary mb-4">Newsletter</h4>
-                <p>At Lykans Associate, we are committed to shaping financial success stories by delivering innovative,
+                <p>At Lykans Associates, we are committed to shaping financial success stories by delivering innovative,
                     reliable, and tailored investment solutions. </p>
                 <div class="w-100">
                     <div class="input-group">
