--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>lykansassociate</title>
+    <title>lykansassociates</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
@@ -44,7 +44,7 @@
                     <div class="col-lg-7 text-left">
                         <div class="h-100 d-inline-flex align-items-center py-2 px-3">
                             <i class="fa fa-envelope text-primary mr-2"></i>
-                            <small>contact@lykansassociate.com</small>
+                            <small>contact@lykansassociates.com</small>
                         </div>
                         <div class="h-100 d-inline-flex align-items-center py-2 px-2">
                             <i class="fa fa-phone-alt text-primary mr-2"></i>
@@ -187,7 +187,7 @@
                     <i class="fa fa-2x fa-envelope-open text-primary"></i>
                     <div class="ml-3">
                         <h5 class="text-white">Email Us</h5>
-                        <p class="m-0">contact@lykansassociate.com</p>
+                        <p class="m-0">contact@lykansassociates.com</p>
                     </div>
                 </div>
             </div>
@@ -238,7 +238,7 @@
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
                 <h4 class="font-weight-semi-bold text-primary mb-4">Newsletter</h4>
-                <p>At Lykans Associate, we are committed to shaping financial success stories by delivering innovative,
+                <p>At Lykans Associates, we are committed to shaping financial success stories by delivering innovative,
                     reliable, and tailored investment solutions. </p>
                 <div class="w-100">
                     <div class="input-group">
@@ -254,7 +254,7 @@
         <div class="row p-4  mx-0" style="background: rgba(256, 256, 256, .05);">
             <div class="col-md-6 text-center text-md-left mb-3 mb-md-0">
                 <p style="text-align: center;" class="m-0 text-white">&copy; <a class="font-weight-bold"
-                        href="#">lykansassociate.com</a>. All Rights
+                        href="#">lykansassociates.com</a>. All Rights
                     Reserved.</p>
             </div>
         </div>
