--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>lykansassociate</title>
+    <title>lykansassociates</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
@@ -621,7 +621,7 @@
         </div>
         <div class="row p-4  mx-0" style="background: rgba(256, 256, 256, .05);">
             <div class="col-md-6 text-center text-md-left mb-3 mb-md-0">
-                <p style="text-align: center;" class="m-0 text-white">&copy; <a class="font-weight-bold" href="#">lykansassociate.com</a>. All Rights
+                <p style="text-align: center;" class="m-0 text-white">&copy; <a class="font-weight-bold" href="#">lykansassociates.com</a>. All Rights
                     Reserved.</p>
             </div>
         </div>
