--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </a>
             </div>
             <div class="col-lg-9">
-                <div class="row bg-white border-bottom d-none d-lg-flex">
+                <div class="row bg-white d-none d-lg-flex">
                     <div class="col-lg-7 text-left">
                         <div class="h-100 d-inline-flex align-items-center py-2 px-3">
                             <i class="fa fa-envelope text-primary mr-2"></i>
@@ -87,7 +87,7 @@
                             <a href="team.html" class="nav-item nav-link">Insights</a>
                             <a href="contact.html" class="nav-item nav-link">Contact</a>
                         </div>
-                        <a href="#Connect" class="btn btn-primary mr-3 d-none d-lg-block">Let's Connect</a>
+                        <a href="#Connect" class="btn btn1 btn-primary mr-3 d-none d-lg-block">Let's Connect</a>
                     </div>
                 </nav>
             </div>
