--- a/about.html
+++ b/about.html
@@ -88,7 +88,7 @@
                             <a href="team.html" class="nav-item nav-link">Insights</a>
                             <a href="contact.html" class="nav-item nav-link">Contact</a>
                         </div>
-                        <a href="#Connect" class="btn btn-primary mr-3 d-none d-lg-block">Let's Connect</a>
+                         <a href="#Connect" class="btn btn1 btn-primary mr-3 d-none d-lg-block">Let's Connect</a>
                     </div>
                 </nav>
             </div>
