--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
                 </a>
             </div>
             <div class="col-lg-9">
-                <div class="row bg-white border-bottom d-none d-lg-flex">
+                <div class="row bg-white d-none d-lg-flex">
                     <div class="col-lg-7 text-left">
                         <div class="h-100 d-inline-flex align-items-center py-2 px-3">
                             <i class="fa fa-envelope text-primary mr-2"></i>
