--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
                         </a>
                         <div class="logo-div">
                             <h6>Listed on</h6>
-                            <h4>Lycans</h4>
+                            <h4>Lykans</h4>
                         </div>
                     </div>
                 </div>
