--- a/index.html
+++ b/index.html
@@ -315,7 +315,83 @@
             </div>
         </div>
     </div>
+    <h1 style="text-align: center; text-transform:uppercase; font-family:Georgia, 'Times New Roman', Times, serif; margin-bottom:20px">Latest Blogs & News</h1>
+    <section class="blog-section">
 
+        <div class="blog">
+            <div class="content" onmouseover="showText(this)" onmouseout="hideText(this)">
+                <img src="./img/pexels-fauxels-3184360.jpg" alt="Example Image" style="width:600px; height:auto;">
+                <div class="hover-text">
+                    <h3>"Who We Are?"</h3>
+                    <p>
+
+                        Lykans Associates was founded on the belief that everyone deserves access to expert financial
+                        advice and resources. Our team of seasoned professionals brings decades of experience in wealth
+                        management, financial planning, and business consulting. </p>
+                </div>
+            </div>
+            <div class="blog-content">
+                <h2 class="blog-title">"Empowering Financial Futures with Lykans Associates"</h2>
+                <p class="blog-description">
+
+                    Welcome to Lykans Associates, where your financial growth is our mission. As a trusted partner in
+                    the world of finance, we specialize in providing customized financial solutions that help
+                    individuals and businesses achieve their aspirations. Whether you're planning your retirement,
+                    expanding your business, or navigating complex investment opportunities, we’re here to guide you
+                    every step of the way.<br>We are committed to empowering our
+                    clients with the knowledge and tools they need to make informed decisions.</p>
+            </div>
+        </div>
+        <div class="blog">
+            <div class="blog-content">
+                <h2 class="blog-title">"Why Choose Lykans Associates?"</h2>
+                <p class="blog-description">
+
+                    <strong>Tailored Solutions:</strong> We believe in creating strategies that fit your unique needs,
+                    not one-size-fits-all approaches.<br>
+                    <strong>Client-Centric Approach:</strong> Your success is our success. We’re committed to building
+                    long-term relationships founded on trust and results.
+                </p>
+            </div>
+            <div class="content" onmouseover="showText(this)" onmouseout="hideText(this)">
+                <img src="./img/pexels-cowomen-1058097-2041383.jpg" alt="Blog Image" style="width:600px; height:auto;">
+                <div class="hover-text">
+                    <p>
+                        <strong> Transparency:</strong> We prioritize clear communication, so you always know where your
+                        finances stand.<br>
+
+                        <strong>Expertise You Can Trust:</strong> Our team’s dedication to staying ahead of industry
+                        trends ensures you benefit from the latest insights.
+                    </p>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="blog">
+            <div class="content" onmouseover="showText(this)" onmouseout="hideText(this)">
+                <img src="./img/pexels-fauxels-3184433.jpg" alt="Blog Image" style="width:480px; height:400px;">
+                <div class="hover-text">
+                    <h3>Let’s Shape Your Financial Future Together</h3>
+                    <p>
+
+                        Financial success isn’t a destination; it’s a journey. With Lykans Associates by your side,
+                        you’ll have the support and expertise you need to navigate the road ahead. Ready to take the
+                        first step? Contact Us Now!
+                    </p>
+                </div>
+            </div>
+            <div class="blog-content">
+                <h2 class="blog-title">"Success Stories"</h2>
+                <p class="blog-description">
+
+                    Our clients’ achievements speak volumes about the impact of our services. From entrepreneurs scaling
+                    their businesses to families achieving financial independence, we’ve been privileged to play a part
+                    in their journeys. Explore their inspiring stories and discover how Lykans Associates can help you
+                    too.</p>
+            </div>
+        </div>
+    </section>
     <!-- Action Start -->
     <div class="container-fluid py-5">
         <div class="container py-5">
