--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                         <div class="navbar-nav mr-auto py-0">
                             <a href="index.html" class="nav-item nav-link active">Home</a>
                             <a href="about.html" class="nav-item nav-link">Who We Are</a>
-                            <a href="service.html" class="nav-item nav-link">Investment Solutions</a>
-                            <a href="team.html" class="nav-item nav-link">Insights</a>
+                            <a href="#why" class="nav-item nav-link">Investment Solutions</a>
+                            <a href="#blog" class="nav-item nav-link">Insights</a>
                             <a href="contact.html" class="nav-item nav-link">Contact</a>
                         </div>
                         <a href="#Connect" class="btn btn1 btn-primary mr-6 d-none d-lg-block">Let's Connect</a>
@@ -265,7 +265,7 @@
 
 
     <!-- Features Start -->
-    <div class="container-fluid py-5">
+    <div id="why" class="container-fluid py-5">
         <div class="container py-5">
             <div class="row">
                 <div class="col-lg-6" style="min-height: 500px;">
@@ -316,7 +316,7 @@
         </div>
     </div>
     <h1 style="text-align: center; text-transform:uppercase; font-family:Georgia, 'Times New Roman', Times, serif; margin-bottom:20px">Latest Blogs & News</h1>
-    <section class="blog-section">
+    <section id="blog" class="blog-section">
 
         <div class="blog">
             <div class="content" onmouseover="showText(this)" onmouseout="hideText(this)">
