--- a/index.html
+++ b/index.html
@@ -65,62 +65,80 @@
 
 
     <!-- Carousel Start -->
+   <!-- Carousel Start -->
     <div class="container-fluid p-0 mb-5 pb-5">
         <div id="header-carousel" class="carousel slide carousel-fade" data-ride="carousel">
             <div class="carousel-inner">
+                <!-- Slide 1 -->
                 <div class="carousel-item position-relative active" style="height: 100vh; min-height: 400px;">
-                    <img class="position-absolute w-100 h-100" src="img/pic1.jpg" style="object-fit: cover;">
+                    <img class="position-absolute w-100 h-100 bg-zoom" src="img/pic1.jpg" style="object-fit: cover;">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
-                        <div class="p-3" style="max-width: 900px;">
-                            <h3 class="display-4 text-capitalize text-white mb-4">Achieve More with Expert Private
-                                Wealth Management</h3>
-                            <a class="btn btn-primary py-3 px-5 mt-2" href="#Connect">Get An Appointment</a>
+                        <div class="p-3 animated fadeInDown delay-1s" style="max-width: 900px;">
+                            <h3 class="display-4 text-capitalize text-white mb-4 slide-up">Achieve More with Expert
+                                Private Wealth Management</h3>
+                            <a class="btn btn-primary py-3 px-5 mt-2 animated fadeIn delay-2s" href="#Connect">Get An
+                                Appointment</a>
                         </div>
                     </div>
                 </div>
+                <!-- Slide 2 -->
                 <div class="carousel-item position-relative" style="height: 100vh; min-height: 400px;">
-                    <img class="position-absolute w-100 h-100" src="img/pc2.jpg" style="object-fit: cover;">
+                    <img class="position-absolute w-100 h-100 bg-zoom" src="img/pc2.jpg" style="object-fit: cover;">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
-                        <div class="p-3" style="max-width: 900px;">
-                            <h3 class="display-4 text-capitalize text-white mb-4">Financial Consultation LLC: Expert
-                                Financial Guidance</h3>
-                            <a class="btn btn-primary py-3 px-5 mt-2" href="#Connect">Call Us Now</a>
+                        <div class="p-3 animated fadeInDown delay-1s" style="max-width: 900px;">
+                            <h3 class="display-4 text-capitalize text-white mb-4 slide-up">Expert Financial Guidance
+                            </h3>
+                            <a class="btn btn-primary py-3 px-5 mt-2 animated fadeIn delay-2s" href="#Connect">Call Us
+                                Now</a>
                         </div>
                     </div>
                 </div>
+                <!-- Slide 3 -->
                 <div class="carousel-item position-relative" style="height: 100vh; min-height: 400px;">
-                    <img class="position-absolute w-100 h-100" src="img/pic4.jpg" style="object-fit: cover;">
+                    <img class="position-absolute w-100 h-100 bg-zoom" src="img/pic4.jpg" style="object-fit: cover;">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
-                        <div class="p-3" style="max-width: 900px;">
-                            <h3 class="display-4 text-capitalize text-white mb-4">Secure Your Future with Smart
+                        <div class="p-3 animated fadeInDown delay-1s" style="max-width: 900px;">
+                            <h3 class="display-4 text-capitalize text-white mb-4 slide-up">Secure Your Future with Smart
                                 Investments</h3>
-                            <a class="btn btn-primary py-3 px-5 mt-2" href="#Connect">Call Us Now</a>
+                            <a class="btn btn-primary py-3 px-5 mt-2 animated fadeIn delay-2s" href="#Connect">Call Us
+                                Now</a>
                         </div>
                     </div>
                 </div>
+                <!-- Slide 4 -->
                 <div class="carousel-item position-relative" style="height: 100vh; min-height: 400px;">
-                    <img class="position-absolute w-100 h-100" src="img/pic3.jpg" style="object-fit: cover;">
+                    <img class="position-absolute w-100 h-100 bg-zoom" src="img/pic3.jpg" style="object-fit: cover;">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
-                        <div class="p-3" style="max-width: 900px;">
-                            <h3 class="display-4 text-capitalize text-white mb-4">Trusted Leadership in the Financial
-                                Industry</h3>
-                            <a class="btn btn-primary py-3 px-5 mt-2" href="#Connect">Let's Connect</a>
+                        <div class="p-3 animated fadeInDown delay-1s" style="max-width: 900px;">
+                            <h3 class="display-4 text-capitalize text-white mb-4 slide-up">Trusted Leadership in the
+                                Financial Industry</h3>
+                            <a class="btn btn-primary py-3 px-5 mt-2 animated fadeIn delay-2s" href="#Connect">Let's
+                                Connect</a>
                         </div>
                     </div>
                 </div>
             </div>
-            <a class="carousel-control-prev" href="#header-carousel" data-slide="prev">
-                <div class="btn btn-lg btn-secondary btn-lg-square">
-                    <span class="carousel-control-prev-icon"></span>
-                </div>
-            </a>
-            <a class="carousel-control-next" href="#header-carousel" data-slide="next">
-                <div class="btn btn-lg btn-secondary btn-lg-square">
-                    <span class="carousel-control-next-icon"></span>
+
+            <!-- Carousel Controls -->
+            <!-- Custom Carousel Controls -->
+            <a class="carousel-control-next" href="#header-carousel"
+                style="right: 0px; top:4%; transform: translateY(-50%);">
+                <div class="carousel-indicators-custom1">
+                    <button class="circle-btn active" data-target="#header-carousel" data-slide-to="0"
+                        aria-label="Slide 1"></button>
+                    <button class="circle-btn" data-target="#header-carousel" data-slide-to="1"
+                        aria-label="Slide 2"></button>
+                    <button class="circle-btn" data-target="#header-carousel" data-slide-to="2"
+                        aria-label="Slide 3"></button>
+                    <button class="circle-btn" data-target="#header-carousel" data-slide-to="3"
+                        aria-label="Slide 4"></button>
                 </div>
             </a>
         </div>
     </div>
+
+
+    <!-- Carousel End -->
     <!-- Carousel End -->
 
 
