--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 </div>
                 <div class="col-lg-7 mt-4 mt-lg-0">
                     <h2 class="position-relative text-center bg-white text-primary rounded p-3 mt-4 mb-4 d-none d-lg-block"
-                        style="width: 350px; margin-left: -205px;">Learn About Us</h2>
+                        style="width: 350px; margin-left: -205px; text-transform:uppercase;">Learn About Us</h2>
                     <h6 class="text-uppercase"></h6>
                     <h1 style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;" class="mb-4">Pave
                         the Path to a Prosperous Future with Lykans Associates</h1>
@@ -236,7 +236,7 @@
                 <div class="col-lg-6 pt-5 pb-lg-5">
                     <div class="feature-text bg-white rounded p-lg-5">
                         <h6 class="text-uppercase">Our Features</h6>
-                        <h1 style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;"  class="mb-4">Why Choose Us</h1>
+                        <h1 style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; text-transform:uppercase;"  class="mb-4">Why Choose Us</h1>
                         <div class="d-flex mb-4">
                             <div class="btn-primary btn-lg-square px-3" style="border-radius: 50px;">
                                 <h5 class="text-secondary m-0">01</h5>
@@ -282,7 +282,7 @@
                 <div class="row h-100 align-items-center justify-content-center">
                     <div class="col-lg-6 py-5">
                         <div class="rounded p-5 my-5" style="background: rgba(55, 55, 63, .7);">
-                            <h1 style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;" class="text-center text-white mb-4">Get An Appointment</h1>
+                            <h1 style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; text-transform:uppercase;" class="text-center text-white mb-4">Get An Appointment</h1>
                             <form>
                                 <div class="form-group">
                                     <input type="text" class="form-control border-0 p-4" placeholder="Your Name"
