--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
         </div>
     </section>
     <div class="container1">
-         <h1 style="text-align: center;margin-bottom:10px; text-transform:uppercase; font-family:Georgia, 'Times New Roman', Times, serif">Our Companies</h1>
+         <h1 style="text-align: center;margin-top:10px; text-transform:uppercase; font-family:Georgia, 'Times New Roman', Times, serif">Our Companies</h1>
         <div class="swiper">
             <div class="swiper-wrapper">
                 <!-- Slide 1 -->
