--- a/contact.html
+++ b/contact.html
@@ -125,10 +125,13 @@
                 </div>
                 <div class="col-lg-6" style="min-height: 400px;">
                     <div class="position-relative h-100 rounded overflow-hidden">
-                        <iframe style="width: 100%; height: 100%; object-fit: cover;"
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3609.503150033885!2d55.27218721549571!3d25.27698798387181!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e5f434c12b2d555%3A0x8ff41a60dc7b9b1f!2sDubai%2C%20United%20Arab%20Emirates!5e0!3m2!1sen!2sus!4v1603794290143!5m2!1sen!2sus"
-                            frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0">
-                        </iframe>
+                        <iframe 
+    style="width: 100%; height: 100%; object-fit: cover; border: 0;" 
+    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3609.392052562685!2d55.27218731538661!3d25.184504183889934!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e5f4341f5a64c8d%3A0x6db416d7e00f7b1c!2sPrime%20Tower%2C%20Business%20Bay%2C%20Dubai%2C%20UAE!5e0!3m2!1sen!2s!4v1700000000000!5m2!1sen!2s" 
+    allowfullscreen="" 
+    aria-hidden="false" 
+    tabindex="0">
+</iframe>
 
                     </div>
                 </div>
