--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
                             <a href="index.html" class="nav-item nav-link">Home</a>
                             <a href="about.html" class="nav-item nav-link active">Who We Are</a>
                             <a href="index.html#why" class="nav-item nav-link">Investment Solutions</a>
-                            <a href="index.html#bog" class="nav-item nav-link">Insights</a>
+                            <a href="index.html#blog" class="nav-item nav-link">Insights</a>
                             <a href="contact.html" class="nav-item nav-link">Contact</a>
                         </div>
                          <a href="#Connect" class="btn btn1 btn-primary mr-3 d-none d-lg-block">Let's Connect</a>
