--- a/index.html
+++ b/index.html
@@ -334,6 +334,32 @@
         </div>
     </div>
     <!-- Appointment End -->
+    <div class="py-5 row text-center number-container">
+        <div class="col-md-3">
+            <div class="number-box">
+                <h2 class="number" data-target="5000">0</h2>
+                <p>Clients Served</p>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div class="number-box">
+                <h2 class="number" data-target="300">0</h2>
+                <p>Projects Completed</p>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div class="number-box">
+                <h2 class="number" data-target="10">0</h2>
+                <p>Years of Experience</p>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div class="number-box">
+                <h2 class="number" data-target="1000">0</h2>
+                <p>Awards Won</p>
+            </div>
+        </div>
+    </div>
     <h1 style="text-align: center; text-transform:uppercase; font-family:Georgia, 'Times New Roman', Times, serif; margin-bottom:20px">Latest Blogs & News</h1>
     <section id="blog" class="blog-section">
 
