--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
             </div>
         </div>
     </div>
-    <h1 style="text-align: center; text-transform:uppercase; font-family:Georgia, 'Times New Roman', Times, serif; margin-bottom:20px">Latest Blogs & News</h1>
+    <h1 style="text-align: center; text-transform:uppercase; font-family:Georgia, 'Times New Roman', Times, serif;margin-top:30px; margin-bottom:20px">Latest Blogs & News</h1>
     <section id="blog" class="blog-section">
 
         <div class="blog">
