--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
         </div>
     </div>
     <!-- Appointment End -->
-    <div class="py-5 row text-center number-container">
+    <div class="py-5 row text-center number-container" id="number-counter">
         <div class="col-md-3">
             <div class="number-box">
                 <h2 class="number" data-target="5000">0</h2>
