--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div id="header-carousel" class="carousel slide carousel-fade" data-ride="carousel">
             <div class="carousel-inner">
                 <!-- Slide 1 -->
-                <div class="carousel-item position-relative active" style="height: 100vh; min-height: 400px;">
+                <div class="carousel-item position-relative active">
                     <img class="position-absolute w-100 h-100 bg-zoom" src="img/pic1.jpg" style="object-fit: cover;">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3 animated fadeInDown delay-1s" style="max-width: 900px;">
@@ -82,7 +82,7 @@
                     </div>
                 </div>
                 <!-- Slide 2 -->
-                <div class="carousel-item position-relative" style="height: 100vh; min-height: 400px;">
+                <div class="carousel-item position-relative">
                     <img class="position-absolute w-100 h-100 bg-zoom" src="img/pc2.jpg" style="object-fit: cover;">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3 animated fadeInDown delay-1s" style="max-width: 900px;">
@@ -94,7 +94,7 @@
                     </div>
                 </div>
                 <!-- Slide 3 -->
-                <div class="carousel-item position-relative" style="height: 100vh; min-height: 400px;">
+                <div class="carousel-item position-relative">
                     <img class="position-absolute w-100 h-100 bg-zoom" src="img/pic4.jpg" style="object-fit: cover;">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3 animated fadeInDown delay-1s" style="max-width: 900px;">
@@ -106,7 +106,7 @@
                     </div>
                 </div>
                 <!-- Slide 4 -->
-                <div class="carousel-item position-relative" style="height: 100vh; min-height: 400px;">
+                <div class="carousel-item position-relative">
                     <img class="position-absolute w-100 h-100 bg-zoom" src="img/pic3.jpg" style="object-fit: cover;">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3 animated fadeInDown delay-1s" style="max-width: 900px;">
